--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-firebaseui": "^6.0.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
